renamed tomcat_opts to solr_host recipe, which is now handling the -Dhost=xxx part of JVM opts. docs updated